--- a/HelloWorld.html
+++ b/HelloWorld.html
@@ -11,7 +11,7 @@
             h1 {
                 position: absolute;
                 text-align: center;
-                top : 90% ; 
+                top : 70% ; 
                 width : 100%;
                 font-family: Arial, Helvetica, sans-serif;
                 font-size: 100;
@@ -20,6 +20,7 @@
     </head>
     <body>
         <h1>Hello World</h1>
+        <h3>Hello World</h3>
         <h2>Super thugo</h2>
         <h2>hgthHello</h2>
         <p>Merci Yann pour ton aide</p>
